# pmms-heat-dissipation

./: .gitignore  Makefile  README.md
assignment_1/heat_seq/: CMakeLists.txt  Makefile  compute.c  heat_seq  helpers.c  run.sh
assignment_1/heat_simd/: CMakeLists.txt  Makefile  compute.c  helpers.c  main.c
assignment_2/heat_omp/: CMakeLists.txt  Makefile  compute.c  compute_seq.c  helpers.c  output.c  prun.sh  run.sh
assignment_2/mergesort/: CMakeLists.txt  merge.c
assignment_2/vecsort/: CMakeLists.txt  Makefile  vecsort.c
assignment_3/heat_pth/: CMakeLists.txt  Makefile  compute.c  prun.sh  run.sh
assignment_3/histo/: CMakeLists.txt  run_all.sh
assignment_3/histo/histo_avoiding_mutual_ex/: histo.c
assignment_3/histo/with_mutual_ex/: Makefile
assignment_3/histo/with_mutual_ex/histo_atomic/: Makefile  histo.c
assignment_3/histo/with_mutual_ex/histo_mutex/: histo.c
assignment_3/histo/with_mutual_ex/histo_semaphores/: histo.c
assignment_3/histo/with_mutual_ex/histo_sw_transactional/: Makefile  histo.c
assignment_3/pipesort/: Makefile  pipesort.c  pipesort.h
assignment_4/convolution/: Makefile  convolution.cu  convolution.ptx  timer.cc  tuner.py
assignment_4/heat_cuda/: Makefile  compute.c  cuda_compute.cu  cuda_compute.h  heat_cuda  img.c  input.c  prun.sh  run.sh
assignment_4/histogram/: Makefile  histo_kernel.cu  histo_kernel.h  histogram-events.cu  histogram.c  histogram.cu  histogram.ptx  myhistogram  myhistogram-events  results.txt
assignment_4/image_pipeline/: image_pipeline.c  image_pipeline_kernel.cu  image_pipeline_kernel.h
demo/: Makefile  compute.h  fail.h  img.c  input.h  main_imgdemo.c  main_inputdemo.c  main_outputdemo.c  output.h
images/: Makefile  areas_100x150.pgm  areas_150x100.pgm  debug_cond_5x4.pgm  debug_temp_5x4.pgm  gradient_150x100.pgm  pat1_100x150.pgm  pat2_1000x100.pgm  pat2_1000x1000.pgm  pat2_1000x200.pgm  pat2_1000x50.pgm  pat2_100x100.pgm  pat2_100x1000.pgm  pat2_100x150.pgm  pat2_100x200.pgm  pat2_100x2000.pgm  pat2_100x50.pgm  pat2_1024x1024.pgm  pat2_2000x100.pgm  pat2_2000x200.pgm  pat2_2000x50.pgm  pat2_200x100.pgm  pat2_200x1000.pgm  pat2_200x200.pgm  pat2_200x2000.pgm  pat2_200x50.pgm  pat2_50x100.pgm  pat2_50x1000.pgm  pat2_50x200.pgm  pat2_50x2000.pgm  pat2_50x50.pgm  pat3_100x150.pgm  plasma_1000x100.pgm  plasma_1000x200.pgm  plasma_1000x50.pgm  plasma_100x100.pgm  plasma_100x1000.pgm  plasma_100x150.pgm  plasma_100x200.pgm  plasma_100x2000.pgm  (+16 more)
include/: compute.h  fail.h  helpers.h  input.h  output.h
src/: fail.c  helpers.c  img.c  input.c  main.c  output.c
